tests/typing/good/testfile-variance-4.scala

class T[+A](a:A) {}
object Main { def main(args: Array[String]) { } }
