tests/typing/bad/testfile-variance-3.scala

class T[+A] { def m(a:A) {} }
object Main { def main(args: Array[String]) { } }
